--- a/booka4.tex
+++ b/booka4.tex
@@ -39,9 +39,9 @@
 \makeindex
 
 \newcommand{\myname}{David~Zimmerer}
-\newcommand{\headtitle}{Title of thesis\\ 
-                        Second title line}
-\newcommand{\floatingtitle}{Title of thesis - Second title line}
+\newcommand{\headtitle}{Spiking Convolutional Deep Belief Networks \\ 
+                        for High Level Feature Extraction }
+\newcommand{\floatingtitle}{Spiking Convolutional Deep Belief Networks for High Level Feature Extraction }
 \newcommand{\thesistype}{Master thesis}
 
 \newcommand{\reviewerone}{Prof.~Dr.--Ing.~J.~M.~Zöllner}
