--- a/preface/abbrev.tex
+++ b/preface/abbrev.tex
@@ -17,6 +17,7 @@
  \acro{LIF}{Leaky Integrate-and-Fire}
  \acro{LTD}{Long-Term Depression}
  \acro{LTP}{Long-Term Potentiation}
+ \acro{MCM}{Markov Chain Monte Carlo}
  \acro{MLP}{Multilayer Perceptron}
  \acro{MRF}{Markov Random Field}
  \acro{NN}{Neural Network}
