--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -9,7 +9,7 @@
 \begin{tabularx}{0.65\textwidth}{|XX|}
 \hline
 Resting potential    		& -65 mV 		    \\
-Membrane Capacity    		& 1.0 nF 		     \\
+Membrane capacity    		& 1.0 nF 		     \\
 Membrane time constant    	& 20.0 ms		             \\
 Refractory period     		& 1.0 ms		                 \\
 Offset current    			& 0.0 nA		              \\
@@ -25,7 +25,7 @@ Spike threshold     		& -50.0 mV          \\\hline
 \begin{tabularx}{0.65\textwidth}{|XX|}
 \hline
 Resting potential    		& -65 mV 		    \\
-Membrane Capacity    		& 1.0 nF 		     \\
+Membrane capacity    		& 1.0 nF 		     \\
 Membrane time constant    	& 1.0 ms		             \\
 Refractory period     		& 10.0 ms		                 \\
 Offset current    			& 1.0 nA		              \\
@@ -42,7 +42,7 @@ Spike threshold     		& -52.0 mV          \\\hline
 \begin{tabularx}{0.65\textwidth}{|XX|}
 \hline
 Resting potential    			& -65 mV 		    \\
-Membrane Capacity    			& 1.0 nF 		     \\
+Membrane capacity    			& 1.0 nF 		     \\
 Membrane time constant    		& 20.0 ms		             \\
 Refractory period     			& 10.0 ms		                 \\
 Offset current    				& 1.0 nA		              \\
