--- a/content/bibliography.bib
+++ b/content/bibliography.bib
@@ -74,6 +74,17 @@ title = {{Towards Grasping with Spiking Neural Networks for an Anthropomorphic R
 }
 
 
+@article{sillito2006always,
+  title={Always returning: feedback and sensory processing in visual cortex and thalamus},
+  author={Sillito, Adam M and Cudeiro, Javier and Jones, Helen E},
+  journal={Trends in neurosciences},
+  volume={29},
+  number={6},
+  pages={307--316},
+  year={2006},
+  publisher={Elsevier}
+}
+
 @ARTICLE{Zorzi2013Modeling,
 author={Zorzi, Marco and Testolin, Alberto and Stoianov, Ivilin},   
 title={Modeling language and cognition with deep unsupervised learning: a tutorial overview},      
